<resources>
    <string name="app_name">Intents</string>
    <string name="call_dialer">Call Dialer</string>
    <string name="email">Email</string>
    <string name="browser">Browser</string>
    <string name="different_application_using_implicit_intents">Different Application Using Implicit Intents</string>
    <string name="implicit_intents">Implicit Intents</string>
    <string name="explicit_intent">Explicit Intent</string>
    <string name="open_new_activity">Open New Activity</string>
    <string name="pending_intents">Pending Intents</string>
    <string name="pending">Pending Intent</string>
    <string name="explicit">Explicit Intents</string>
    <string name="implicit">Implicit Intent</string>
    <string name="show_notification">Show Notification</string>
    <string name="enter_message">Enter Message</string>
    <string name="send_notification">Send Notification</string>
</resources>
