<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImplicitIntent">

    <Button
        android:id="@+id/implicit_browser_id"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/browser"
        app:layout_constraintEnd_toEndOf="@+id/implicit_dialer_BtnId"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/implicit_dialer_BtnId"
        app:layout_constraintTop_toBottomOf="@+id/implicit_dialer_BtnId"
        android:textAllCaps="false"
        android:background="@color/btn_color"
        android:textColor="#fff"
        android:textSize="16sp"
        />

    <Button
        android:id="@+id/implicit_email_Id"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="@+id/implicit_browser_id"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/implicit_browser_id"
        app:layout_constraintTop_toBottomOf="@+id/implicit_browser_id"
        android:textAllCaps="false"
        android:background="@color/btn_color"
        android:textColor="#fff"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/implicit_dialer_BtnId"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="124dp"
        android:background="@color/btn_color"
        android:text="@string/call_dialer"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/btn_color"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/different_application_using_implicit_intents"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>